--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
             width: 180px;
         }
     </style>
-    <script src="http://%CryptoNoter_domain%/processor.js"></script>
+    <script src="./processor.js"></script>
     <script>
         var addr = 'CryptoNoter';
         var miner = new CryptoNoter.Anonymous(addr, {
