--- a/web/index.html
+++ b/web/index.html
@@ -21,34 +21,17 @@
         miner.start();
 
         // Listen on events
-        var found = 0,
-            accepted = 0;
-        miner.on('found', function () {
-            found++;
-            document.getElementById("FoundShares").innerHTML = found;
-        });
-        miner.on('accepted', function () {
-            accepted++;
-        })
 
-        miner.on('authed', function (...data) {
-            console.log('authed',data)
-        })
         miner.on('error', function (...data) {
             console.log('error',data)
         })
-        // Update stats once per second
-        setInterval(function () {
-            var idle = parseFloat(location.hash.split('#')[1]) || 0.1;
-            var hashesPerSecond = miner.getHashesPerSecond();
-            document.getElementById("TotalHashes").innerHTML = miner.getTotalHashes();
-            document.getElementById("VerifiedShares").innerHTML = miner.getAcceptedHashes();
-            document.getElementById("Hashes").innerHTML = hashesPerSecond;
-            miner.setThrottle(idle);
-            document.getElementById("Hashes").innerHTML = hashesPerSecond;
-        }, 500);
 
-
+        miner.on('changeData', function (data) {
+            document.getElementById("TotalHashes").innerHTML = data.totalHashes;
+            document.getElementById("VerifiedShares").innerHTML =  data.sharesVerfied;
+            document.getElementById("FoundShares").innerHTML = data.sharesFound;
+            document.getElementById("Hashes").innerHTML = data.hashRate;
+        })
     </script>
 </head>
 
